Ensure filters show up on mobile when recruiting

--- a/app/client/src/styles/Search.scss
+++ b/app/client/src/styles/Search.scss
@@ -4,6 +4,9 @@
 
 .outerContainer {
   width: 100%;
+  @media (max-width: $screen-md-min) {
+    min-height: 100vh;
+  }
 
   .searchContentContainer {
     display: flex;
